--- a/docker-compose.test.watch.yaml
+++ b/docker-compose.test.watch.yaml
@@ -1,6 +1,6 @@
+version: '3.8'
+
 services:
-  ffc-template-node:
+  ffc-future-grants-file-store:
     command: >
       sh -c "npm run test:watch"
-    volumes:
-      - ./.git:/home/node/.git
