feat-create message receiver service

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,12 @@ services:
       COST_RESPONSE_QUEUE_ADDRESS: ${COST_RESPONSE_QUEUE_ADDRESS:-ffc-grants-slurry-cost-details-res}${MESSAGE_QUEUE_SUFFIX}
       SCORE_RESPONSE_QUEUE_ADDRESS: ${SCORE_RESPONSE_QUEUE_ADDRESS:-ffc-future-grants-file-store-res}${MESSAGE_QUEUE_SUFFIX}
       SCORE_REQUEST_QUEUE_ADDRESS: ${SCORE_REQUEST_QUEUE_ADDRESS:-ffc-future-grants-file-store-req}${MESSAGE_QUEUE_SUFFIX}
+      APPLICATION_REQUEST_QUEUE_ADDRESS: ${APPLICATION_REQUEST_QUEUE_ADDRESS:-notset}
+      MESSAGE_QUEUE_HOST: ${MESSAGE_QUEUE_HOST:-notset}
+      MESSAGE_QUEUE_USER: ${MESSAGE_QUEUE_USER:-notset}
+      MESSAGE_QUEUE_PASSWORD: ${MESSAGE_QUEUE_PASSWORD:-notset}
+      FILE_STORE_QUEUE_ADDRESS: ${FILE_STORE_QUEUE_ADDRESS:-notset}
+      MESSAGE_QUEUE_SUFFIX: ${MESSAGE_QUEUE_SUFFIX:-notset}
 
 
   ffc-future-grants-file-store-postgres:
