--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,7 +32,8 @@ services:
       MESSAGE_QUEUE_PASSWORD: ${MESSAGE_QUEUE_PASSWORD:-notset}
       FILE_STORE_QUEUE_ADDRESS: ${FILE_STORE_QUEUE_ADDRESS:-notset}
       MESSAGE_QUEUE_SUFFIX: ${MESSAGE_QUEUE_SUFFIX:-notset}
-
+      USER_DATA_REQ_QUEUE_ADDRESS: ${USER_DATA_REQ_QUEUE_ADDRESS:-notset}
+      USER_DATA_RES_QUEUE_ADDRESS: ${USER_DATA_RES_QUEUE_ADDRESS:-notset}
 
   ffc-future-grants-file-store-postgres:
     image: postgres:11.4-alpine
