--- a/helm/ffc-future-grants-file-store/Chart.yaml
+++ b/helm/ffc-future-grants-file-store/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-description: description-of-project-goes-here
-name: ffc-template-node
+description: file-store postgres DB for the grants apply journey
+name: ffc-future-grants-file-store
 # this version is automatically updated in the build pipeline
 version: 1.0.0
 dependencies:
