--- a/helm/ffc-future-grants-file-store/templates/cluster-ip-service.yaml
+++ b/helm/ffc-future-grants-file-store/templates/cluster-ip-service.yaml
@@ -1,3 +1,3 @@
-{{- include "ffc-helm-library.cluster-ip-service" (list . "ffc-template-node.cluster-ip-service") -}}
-{{- define "ffc-template-node.cluster-ip-service" -}}
+{{- include "ffc-helm-library.cluster-ip-service" (list . "ffc-future-grants-file-store.cluster-ip-service") -}}
+{{- define "ffc-future-grants-file-store.cluster-ip-service" -}}
 {{- end -}}
