--- a/helm/ffc-future-grants-file-store/templates/container-secret.yaml
+++ b/helm/ffc-future-grants-file-store/templates/container-secret.yaml
@@ -1,7 +1,17 @@
-{{- include "ffc-helm-library.container-secret" (list . "ffc-template-node.container-secret") -}}
-{{- define "ffc-template-node.container-secret" -}}
+{{- include "ffc-helm-library.container-secret" (list . "ffc-future-grants-file-store.container-secret") -}}
+{{- define "ffc-future-grants-file-store.container-secret" -}}
 stringData:
   {{- if .Values.appInsights.connectionString }}
   APPINSIGHTS_CONNECTIONSTRING: {{ quote .Values.appInsights.connectionString }}
   {{- end }}
+  COOKIE_PASSWORD: {{ .Values.container.cookiePassword | quote }}
+  REDIS_PASSWORD: {{ .Values.container.redisPassword | quote }}
+  DEFRA_ID_CLIENT_SECRET: {{ .Values.container.defraIdClientSecret | quote }}
+  DEFRA_ID_CLIENT_ID: {{ .Values.container.defraIdClientId | quote }}
+  DEFRA_ID_SERVICE_ID: {{ .Values.container.defraIdServiceId | quote }}
+  APIM_OCP_SUBSCRIPTION_KEY: {{ .Values.container.apimOcpSubscriptionKey | quote }}
+  APIM_CLIENT_ID: {{ .Values.container.apimClientId | quote }}
+  APIM_CLIENT_SECRET: {{ .Values.container.apimClientSecret | quote }}
+  BLOB_STORAGE_CONNECTION_STRING: {{ .Values.container.blobStorageConnectionString | quote }}
+  CLAIM_FORM_DOWNLOAD_URL: {{ .Values.container.claimFormDownloadUrl | quote }}
 {{- end -}}
