--- a/helm/ffc-future-grants-file-store/templates/deployment.yaml
+++ b/helm/ffc-future-grants-file-store/templates/deployment.yaml
@@ -1,8 +1,8 @@
-{{- include "ffc-helm-library.deployment" (list . "ffc-template-node.deployment") -}}
-{{- define "ffc-template-node.deployment" -}}
+{{- include "ffc-helm-library.deployment" (list . "ffc-future-grants-file-store.deployment") -}}
+{{- define "ffc-future-grants-file-store.deployment" -}}
 spec:
   template:
     spec:
       containers:
-      - {{ include "ffc-helm-library.container" (list . "ffc-template-node.container") }}
+      - {{ include "ffc-helm-library.container" (list . "ffc-future-grants-file-store.container") }}
 {{- end -}}
