--- a/helm/ffc-future-grants-file-store/templates/config-map.yaml
+++ b/helm/ffc-future-grants-file-store/templates/config-map.yaml
@@ -29,4 +29,5 @@ data:
   BLOB_STORAGE_ACCOUNT_NAME: {{ .Values.container.blobStorageAccountName | quote }}
   BLOB_STORAGE_CONTAINER_NAME: {{ .Values.container.blobStorageContainerName | quote }}
   USE_BLOB_STORAGE_CONNECTION_STRING: {{ .Values.container.useBlobStorageConnectionString | quote }}
+  URL_PREFIX: {{ quote .Values.container.urlPrefix }}
 {{- end -}}
