fix values and set environment

--- a/helm/ffc-future-grants-file-store/values.yaml
+++ b/helm/ffc-future-grants-file-store/values.yaml
@@ -1,4 +1,4 @@
-environment: development
+environment: snd
 name: ffc-future-grants-file-store
 namespace: ffc-future-grants
 workstream: ffc-future-grants
