fix values in yaml files

--- a/helm/ffc-future-grants-file-store/values.yaml
+++ b/helm/ffc-future-grants-file-store/values.yaml
@@ -1,4 +1,4 @@
-environment: snd
+environment: production
 name: ffc-future-grants-file-store
 namespace: ffc-future-grants
 workstream: ffc-future-grants
