--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -7,6 +7,8 @@ services:
   ffc-future-grants-file-store:
     build:
       target: development
+    environment:
+      NODE_ENV: test
     image: ffc-future-grants-file-store-development
     container_name: ffc-future-grants-file-store-test
     command: npm run test
