--- a/helm/ffc-future-grants-file-store/values.yaml
+++ b/helm/ffc-future-grants-file-store/values.yaml
@@ -14,6 +14,10 @@ appInsights:
 azureIdentity:
   clientID:
   resourceID:
+  
+postgresService:
+  postgresDb:
+  postgresqlHost:
 
 containerConfigMap:
   name: ffc-future-grants-file-store-config-map
@@ -63,6 +67,8 @@ container:
   defraIdClientId:
   defraIdClientSecret:
   defraIdServiceId:
+  postgresDb:
+  postgresqlHost:
   defraIdPolicy:
   rpaHostname:
   blobStorageAccountName: blob-account
