--- a/helm/ffc-future-grants-file-store/values.yaml
+++ b/helm/ffc-future-grants-file-store/values.yaml
@@ -1,7 +1,7 @@
 environment: development
 name: ffc-future-grants-file-store
-namespace: ffc-grants
-workstream: ffc-grants
+namespace: ffc-future-grants
+workstream: ffc-future-grants
 image: ffc-future-grants-file-store
 
 labels: {}
@@ -14,10 +14,6 @@ appInsights:
 azureIdentity:
   clientID:
   resourceID:
-  
-postgresService:
-  postgresDb:
-  postgresqlHost:
 
 containerConfigMap:
   name: ffc-future-grants-file-store-config-map
