fix - change package.json default values and add 2 values to values.yaml

--- a/helm/ffc-future-grants-file-store/values.yaml
+++ b/helm/ffc-future-grants-file-store/values.yaml
@@ -28,7 +28,7 @@ deployment:
   minReadySeconds: 0
   minReplicas: 2
   maxReplicas: 4
-  priorityClassName: high
+  priorityClassName: default
   replicas: 2
   restartPolicy: Always
   redeployOnChange: update this field to force a change
@@ -39,6 +39,8 @@ container:
   requestCpu: 120m
   limitMemory: 400Mi
   limitCpu: 400m
+  readOnlyRootFilesystem: true
+  allowPrivilegeEscalation: false
   fileCreatedTopicAddress: file-created
   fileCreatedSubscriptionAddress: file-sender
   protectiveMonitoringUrl:
