--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ffc-template-node",
+  "name": "ffc-future-grants-file-store",
   "version": "0.7.0",
-  "description": "description-of-project-goes-here",
-  "homepage": "https://github.com/DEFRA/ffc-template-node",
+  "description": "DB for our grants apply journey",
+  "homepage": "https://github.com/DEFRA/ffc-future-grants-file-store",
   "main": "app/index.js",
   "scripts": {
     "pretest": "npm run test:lint",
