--- a/helm/ffc-future-grants-file-store/templates/container-secret.yaml
+++ b/helm/ffc-future-grants-file-store/templates/container-secret.yaml
@@ -4,4 +4,6 @@ stringData:
   {{- if .Values.appInsights.connectionString }}
   APPINSIGHTS_CONNECTIONSTRING: {{ quote .Values.appInsights.connectionString }}
   {{- end }}
-{{- end -}}
+    POSTGRES_DB: {{ .Values.container.postgresDb | quote }}
+    POSTGRES_HOST: {{ .Values.container.postgresHost | quote }}
+    {{- end -}}
