--- a/helm/ffc-future-grants-file-store/templates/container-secret.yaml
+++ b/helm/ffc-future-grants-file-store/templates/container-secret.yaml
@@ -5,5 +5,5 @@ stringData:
   APPINSIGHTS_CONNECTIONSTRING: {{ quote .Values.appInsights.connectionString }}
   {{- end }}
   POSTGRES_DB: {{ .Values.container.postgresDb | quote }}
-  POSTGRES_HOST: {{ .Values.container.postgresHost | quote }}
+  POSTGRES_HOST: {{ .Values.container.postgresqlHost | quote }}
 {{- end -}}
