--- a/helm/ffc-future-grants-file-store/values.yaml
+++ b/helm/ffc-future-grants-file-store/values.yaml
@@ -54,6 +54,7 @@ container:
   port: 3000
   postgresDb: ffc_future_grants_file_store
   postgresUser: adminuser@sndffcdbssq1002
+  fileStorePostgresPassword:
 
 livenessProbe:
   path: /healthz
