fix - edit values

--- a/helm/ffc-future-grants-file-store/values.yaml
+++ b/helm/ffc-future-grants-file-store/values.yaml
@@ -3,25 +3,27 @@ name: ffc-future-grants-file-store
 namespace: ffc-future-grants
 workstream: ffc-future-grants
 image: ffc-future-grants-file-store
-
 labels: {}
-
 aadPodIdentity: true
+
+postgresService:
+  postgresDb: ffc_future_grants_file_store
+  postgresExternalName:
+  postgresqlHost: ffc-future-grants-file-store-postgres
+  postgresPort: 5432
+  postgresSchema: public
+  postgresUser: postgres
 
 appInsights:
   connectionString:
-
 azureIdentity:
   clientID: dummy
   resourceID: dummy
-
 containerConfigMap:
   name: ffc-future-grants-file-store-config-map
-
 containerSecret:
   name: ffc-future-grants-file-store-container-secret
   type: Opaque
-
 deployment:
   cpuThreshold: 80
   memoryThreshold: 80
@@ -32,7 +34,6 @@ deployment:
   replicas: 2
   restartPolicy: Always
   redeployOnChange: update this field to force a change
-
 container:
   imagePullPolicy: IfNotPresent
   requestMemory: 120Mi
@@ -43,19 +44,14 @@ container:
   allowPrivilegeEscalation: false
   applicationRequestQueueAddress: ffc-future-grants-application-request
   fileStoreQueueAddress: ffc-future-grants-file-data
-  userDataReqQueueAddress: ffc-future-grants-user-file-data-req-aj
+  userDataReqQueueAddress: 
   userDataResQueueAddress: ffc-future-grants-user-file-data-res-aj
   filesStoredTopicAddress: ffc-future-grants-files-stored-aj
-  postgresqlHost: sndffcdbssq1002.postgres.database.azure.com
   applicationResponseQueueAddress: ffc-future-grants-application-response
   messageQueueHost: namespace.servicebus.windows.net
   messageQueueUser: postgres
   messageQueuePassword: ppp
   port: 3000
-  postgresDb: ffc_future_grants_file_store
-  postgresUser: adminuser@sndffcdbssq1002
-  fileStorePostgresDbPassword: 9vyHcVrnN2Wcrj5r
-
 livenessProbe:
   path: /healthz
   port: 3000
@@ -63,7 +59,6 @@ livenessProbe:
   periodSeconds: 30
   timeoutSeconds: 5
   failureThreshold: 5
-
 readinessProbe:
   path: /healthy
   port: 3000
