fix - add value

--- a/helm/ffc-future-grants-file-store/templates/container-secret.yaml
+++ b/helm/ffc-future-grants-file-store/templates/container-secret.yaml
@@ -1,7 +1,6 @@
 {{- include "ffc-helm-library.container-secret" (list . "ffc-future-grants-file-store.container-secret") -}}
 {{- define "ffc-future-grants-file-store.container-secret" -}}
 stringData:
-  {{- if .Values.appInsights.connectionString }}
   APPINSIGHTS_CONNECTIONSTRING: {{ quote .Values.appInsights.connectionString }}
-  {{- end }}
+  POSTGRES_USER: {{ .Values.postgresService.postgresUser | quote }}
 {{- end -}}
